traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:6: error: not found: value -
    case (1,getMondeLargeur()-1) => setY(getY()+1) //ligne impaire, dernière case : on descends
                             ^TraversalZigZag:6: error: not found: value getMondeLargeur
    case (1,getMondeLargeur()-1) => setY(getY()+1) //ligne impaire, dernière case : on descends
            ^